[package]
name = "qcs-sdk-python"
description = "Python bindings to qcs-sdk-rust"
version = "0.20.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/rigetti/qcs-sdk-rust"
keywords = ["pyquil", "SDK", "Rigetti", "Quil", "Quantum"]
categories = ["api-bindings", "compilers", "science", "emulators"]
readme = "./README.md"

[features]
libquil = ["qcs/libquil"]
grpc-web = ["qcs/grpc-web"]

[lib]
name = "qcs_sdk"
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1.73"
qcs = { path = "../lib", features = ["tracing-opentelemetry"] }
qcs-api.workspace = true
qcs-api-client-common = { workspace = true, features = ["python"] }
qcs-api-client-grpc.workspace = true
qcs-api-client-openapi.workspace = true
pyo3.workspace = true
pyo3-asyncio.workspace = true
pyo3-opentelemetry.workspace = true
pyo3-tracing-subscriber = { workspace = true, features = ["layer-otel-otlp-file", "layer-otel-otlp"] }
quil-rs.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
numpy.workspace = true
rigetti-pyo3.workspace = true
paste = "1.0.11"
pyo3-log.workspace = true
once_cell = "1.18.0"
opentelemetry = { version = "0.23.0" }
opentelemetry_sdk = { version = "0.23.0" }
tracing = { version = "0.1.37" }
prost = "0.12.6"

[build-dependencies]
pyo3-build-config.workspace = true
pyo3-tracing-subscriber = { version = "=0.1.2-dev.1", features = ["layer-otel-otlp-file", "layer-otel-otlp", "stubs"], default-features = false }

[lints.clippy]
too_many_arguments = "allow"

