# This is the metadata Maturin uploads to PyPI on publish
[project]
name = "qcs-sdk-python"
version = "0.21.3-rc.5"
description = "Python interface for the QCS Rust SDK"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
  { name = "Rigetti Computing", email = "softapps@rigetti.com" },
  { name = "Mark Skilbeck", email = "mark.skilbeck@rigetti.com" },
  { name = "Marquess Valdez", email = "mvaldez@rigetti.com" },
  { name = "Randall Fulton", email = "rfulton@rigetti.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
]

dependencies = ["quil>=0.11.2", "qcs-api-client-common>=0.10.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
bindings = "pyo3"
compatibility = "linux"
include = ["THIRDPARTY.yaml"]
sdist-include = ["README.md", "THIRDPARTY.yaml"]

[project.optional-dependencies]
pyquil = [
    "pyquil==4.14.2",
]
dev = [
    "black >= 24.8.0",
    "opentelemetry-sdk==1.25.0",
    "pytest >= 8.1.1",
    "pytest-asyncio >= 0.23.6",
    "pytest-mock >= 3.14.0",
    "pytest-sugar >= 1.0.0",
    "pytest-clarity >= 1.0.1",
    "syrupy >= 4.0.0",
    "maturin == 1.5.1",
    "numpy >= 1.24.1",
    "pdoc >= 14.6.1",
    "ruff >= 0.3.5",
    "mypy >= 1.4.1",
]

[build-system]
requires = ["maturin>=1.0.0,<2.0.0"]
build-backend = "maturin"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.pyright]
# This diagnostic is raised when a type stub is found without a corresponding source file. This is
# necessarily the case for a pure Rust pyo3 module, so disabling it.
reportMissingModuleSource = false
